--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -3,15 +3,15 @@
 <div class="navbar navbar-expand-lg navbar-dark bg-dark box-shadow">
 	<nav class="container d-flex justify-content-between">
 		<a class="navbar-brand" href="index.php">
-			<strong>Project 1</strong>
+			<strong>GameGo</strong>
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="<?php echo( (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https" : "http") . "://{$_SERVER['HTTP_HOST']}"); ?>/index.php">Home</a>
-				<!-- <a class="nav-item nav-link" href="#">#</a> -->
+				<!-- Lookup Bootstrap Nav Pull Right for buttons -->
+				<a class="nav-item nav-link" href="#">#</a>
 			</div>
 	  </div>
 	</nav>
