--- a/css/custom.css
+++ b/css/custom.css
@@ -25,6 +25,7 @@ a.logo_nav:hover {
     width: 100%;
     color: gold;
     text-align: center;
+}
 
 /* Adds a sublt box shadow to any block element */
 .box-shadow{
