--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,8 +1,10 @@
+<!--
 <div class="footer bg-black">
     <p>Copyright &copy; GameGo</p>
 </div>
+-->
 
-<div class="row">
+<div class="row footer bg-black">
     <div class="col-md-4"><p>Copyright &copy; GameGo</p></div>
     <div class="col-md-4"><a href="igive.notasinglef.uk">Contact Us</a></div>
     <div class="col-md-4"><a href="igive.notasinglef.uk">FAQ</a></div>
