--- a/includes/footer.html
+++ b/includes/footer.html
@@ -6,8 +6,8 @@
 
 <div class="row footer bg-black">
     <div class="col-md-4"><p>Copyright &copy; GameGo</p></div>
-    <div class="col-md-4"><a href="igive.notasinglef.uk">Contact Us</a></div>
-    <div class="col-md-4"><a href="igive.notasinglef.uk">FAQ</a></div>
+    <div class="col-md-4"><a href="https://www.igive.notasinglef.uk" target="_blank">Contact Us</a></div>
+    <div class="col-md-4"><a href="https://www.igive.notasinglef.uk" target="_blank">FAQ</a></div>
 </div>
 
 <!-- div.row>div.col-md-4*3 -->
