--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,11 +1,7 @@
-<div class="footer bg-black">
-    <p>Copyright &copy; GameGo</p>
+<div class="container0fluid bg-dark footer">
+	<div class="row justify-content-center my-2">
+		<div class="col-md-4"><a href="http://igive.notasinglef.uk/">Copyright &copy; GameGo</a></div>
+		<div class="col-md-4"><a href="http://igive.notasinglef.uk/">Contact Us</a></div>
+		<div class="col-md-4"><a href="http://igive.notasinglef.uk/">FAQ</a></div>
+	</div>
 </div>
-
-<div class="row">
-    <div class="col-md-4"><p>Copyright &copy; GameGo</p></div>
-    <div class="col-md-4"><a href="igive.notasinglef.uk">Contact Us</a></div>
-    <div class="col-md-4"><a href="igive.notasinglef.uk">FAQ</a></div>
-</div>
-
-<!-- div.row>div.col-md-4*3 -->
