--- a/includes/logo_nav.html
+++ b/includes/logo_nav.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 	<div class="row justify-content-center text-center">
-		<div class="col-md-12 bg-black">
+		<div class="col-md-12 bg-dark">
 			<a class="logo_nav" href="#">
 				<img class="logo_img" src="images/logo.png" alt="GameGo Logo">
 				<h1>GameGo</h1>
@@ -10,6 +10,5 @@
 		</div>
 	</div>
 </div>
-
 
 <!-- End logo_nav.html -->
