--- a/includes/logo_nav.html
+++ b/includes/logo_nav.html
@@ -4,7 +4,7 @@
 	<div class="row justify-content-center text-center">
 		<div class="col-md-12 bg-dark">
 			<a class="logo_nav" href="#">
-				<img class="logo_img" src="images/logo.png" alt="GameGo Logo" onclick="window.location.href = 'index.php'">
+				<img class="logo_img" src="images/logo.png" alt="GameGo Logo" data-toggle="tooltip" title="Home" href = "index.php">
 			</a>
 		</div>
 	</div>
