--- a/includes/logo_nav.html
+++ b/includes/logo_nav.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
 	<div class="row justify-content-center text-center">
 		<div class="col-md-12 bg-dark">
-			<a class="logo_nav" href="#">
+			<a class="logo_nav" href="index.php">
 				<img class="logo_img" src="images/logo.png" alt="GameGo Logo" data-toggle="tooltip" title="Home" href = "index.php">
 			</a>
 		</div>
