--- a/includes/css.html
+++ b/includes/css.html
@@ -6,4 +6,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/custom.css">
 
+<!-- Fontawesome CSS -->
+<link rel="stylesheet" href="css/all.css">
+
 <!-- End css.html -->
