--- a/includes/jsLibs.html
+++ b/includes/jsLibs.html
@@ -2,4 +2,7 @@
 
 <script src="js/toggleShippingVisibility.js"></script>
 
+<!-- Fontawesome JS -->
+<script src="js/all.js"></script>
+
 <!-- End jsLibs.html -->
