Added custom CSS to vertically align .table>td text in middle and removed inline classes

--- a/css/custom.css
+++ b/css/custom.css
@@ -95,3 +95,8 @@ html, body {
 	max-width: 100%;
 	overflow-x: hidden;
 }
+
+/* Vertically center text in tables where dropdown menus are used */
+.table td{
+	vertical-align: middle !important;
+}
